// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interaction"
  >
    <form
      onSubmit={[Function]}
    >
      Search
       
      <input
        onChange={[Function]}
        type="text"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  />
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<form>
  Search
   
  <input
    type="text"
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;
